@@ -4,6 +4,8 @@ include::include.adoc[]
 
 == 2.2 (tbd)
 
+* `@Stepwise` can be applied to (iterated) feature methods, having the effect of executing them sequentially (even if concurrent test mode is active) and to skip subsequent iterations is one iteration fails.
+
 == 2.2-M1 (2022-02-16)
 
 * Add Groovy 4 support https://github.com/spockframework/spock/pull/1382[#1382]
